@@ -1,7 +1,7 @@
 package it.infocert.eigor.api.impl;
 
-import com.amoerie.jstreams.Stream;
-import com.amoerie.jstreams.functions.Filter;
+
+
 import it.infocert.eigor.model.core.rules.Br002AnInvoiceShallHaveAnInvoiceNumberRule;
 import it.infocert.eigor.model.core.rules.Rule;
 import org.hamcrest.Matchers;
@@ -10,7 +10,10 @@ import org.junit.Test;
 import org.reflections.Reflections;
 
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.junit.Assert.assertThat;
 
@@ -33,11 +36,7 @@ public class ReflectionBasedRepositoryTest {
         List<Rule> allRules = sut.rules();
 
         // then
-        List<Rule> rules = Stream.create(allRules).filter(new Filter<Rule>() {
-            @Override public boolean apply(Rule r) {
-                return r.getClass().equals(aRuleThatShouldBeFound);
-            }
-        }).toList();
+        List<Rule> rules = allRules.stream().filter(r -> r.getClass().equals(aRuleThatShouldBeFound)).collect(toList());
 
         assertThat( rules, Matchers.hasSize(1) );
         assertThat( rules.get(0), instanceOf(aRuleThatShouldBeFound));
